git commit -m 'message'

--- a/_notebooks/2023-09-06-javascript-input.ipynb
+++ b/_notebooks/2023-09-06-javascript-input.ipynb
@@ -7,10 +7,9 @@
     "---\n",
     "title: Javascript Input\n",
     "description: A Tech Talk on user inputs using Javascript. The grade calculator takes multiple values and does a calculation on them. User input can be useful for other projects, such as being used as a query.\n",
-    "courses: { csse: {week: 4}, csp: {week: 1, categories: [3.A, 5.B]}, csa: {week: 2} }\n",
+    "courses: {csp: {week: 1}}\n",
     "categories: [C3.0, C3.1, C4.1]\n",
-    "type: ccc\n",
-    "week: 10\n",
+    "type: hacks\n",
     "---"
    ]
   },
