--- a/_posts/2023-09-01-Plan.md
+++ b/_posts/2023-09-01-Plan.md
@@ -2,14 +2,14 @@
 toc: true
 comments: true
 layout: post
-title: Lab Notebook week 2
+title: Weekly Plan for Week 2
 description: weekly plan for week 2 
-type: tangibles
+type: plans
 courses: {csp: {week: 2}}
 ---
 
 
-> Update Blog to contain all hacks.
+> Weekly goals/ plans
 - [ ] make lab notebook for all 3 weeks
 - [ ] run website on github pages(not locally)
 - [ ] Style the theme to work on github pages(isues without remote theme such as minima)
