--- a/_posts/2023-08-30-Snake.md
+++ b/_posts/2023-08-30-Snake.md
@@ -1,12 +1,14 @@
 ---
+toc: true
+comments: true
+layout: post
 title: Classic Snake Game
-layout: base
-description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.  
-permalink: /frontend/snake
-image: /images/snake.png
-categories: [C4.9]
-tags: [javascript]
+description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
+type: hacks
+courses: {csp: {week: 2}}
+type: hacks
 ---
+
 
 <style>
 
