--- a/_posts/2023-08-30-Snake.md
+++ b/_posts/2023-08-30-Snake.md
@@ -6,6 +6,7 @@ title: Classic Snake Game
 description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
 type: hacks
 courses: {csp: {week: 2}}
+type: hacks
 ---
 
 
