--- a/_posts/2023-08-30-Snake.md
+++ b/_posts/2023-08-30-Snake.md
@@ -3,77 +3,76 @@ toc: true
 comments: true
 layout: post
 title: Classic Snake Game
-description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
+description: A pretty advanced use of JavaScript building a classic snake game using menu controls, key events, snake simulation, and timers.
 type: hacks
 courses: {csp: {week: 2}}
 type: hacks
 ---
 
-
 <style>
-
-    body{
+    body {
     }
-    .wrap{
+
+    .wrap {
         margin-left: auto;
         margin-right: auto;
     }
 
-    canvas{
+    canvas {
         display: none;
         border-style: solid;
         border-width: 10px;
-        border-color: #FFFFFF;
+        border-color: #00FF00;
     }
-    canvas:focus{
+
+    canvas:focus {
         outline: none;
     }
 
     /* All screens style */
-    #gameover p, #setting p, #menu p{
+    #gameover p, #setting p, #menu p {
         font-size: 20px;
     }
 
-    #gameover a, #setting a, #menu a{
+    #gameover a, #setting a, #menu a {
         font-size: 30px;
         display: block;
     }
 
-    #gameover a:hover, #setting a:hover, #menu a:hover{
+    #gameover a:hover, #setting a:hover, #menu a:hover {
         cursor: pointer;
     }
 
-    #gameover a:hover::before, #setting a:hover::before, #menu a:hover::before{
+    #gameover a:hover::before, #setting a:hover::before, #menu a:hover::before {
         content: ">";
         margin-right: 10px;
     }
 
-    #menu{
+    #menu {
         display: block;
     }
 
-    #gameover{
+    #gameover {
         display: none;
     }
 
-    #setting{
+    #setting {
         display: none;
     }
 
-    #setting input{
-        display:none;
+    #setting input {
+        display: none;
     }
 
-    #setting label{
+    #setting label {
         cursor: pointer;
     }
 
-    #setting input:checked + label{
+    #setting input:checked + label {
         background-color: #FFF;
         color: #000;
     }
 </style>
-
 
 <div class="container">
     <header class="pb-3 mb-4 border-bottom border-primary text-dark">
@@ -82,13 +81,13 @@ type: hacks
     <div class="container bg-secondary" style="text-align:center;">
         <!-- Main Menu -->
         <div id="menu" class="py-4 text-light">
-            <p>Welcome to Snake, press <span style="background-color: #FFFFFF; color: #000000">space</span> to begin</p>
+            <p>Welcome to Snake, press <span style="background-color: #00FF00; color: #000000">space</span> to begin, WASD to control</p>
             <a id="new_game" class="link-alert">new game</a>
             <a id="setting_menu" class="link-alert">settings</a>
         </div>
         <!-- Game Over -->
         <div id="gameover" class="py-4 text-light">
-            <p>Game Over, press <span style="background-color: #FFFFFF; color: #000000">space</span> to try again</p>
+            <p>Game Over, press <span style="background-color: #00FF00; color: #000000">space</span> to try again</p>
             <a id="new_game1" class="link-alert">new game</a>
             <a id="setting_menu1" class="link-alert">settings</a>
         </div>
@@ -96,7 +95,7 @@ type: hacks
         <canvas id="snake" class="wrap" width="320" height="320" tabindex="1"></canvas>
         <!-- Settings Screen -->
         <div id="setting" class="py-4 text-light">
-            <p>Settings Screen, press <span style="background-color: #FFFFFF; color: #000000">space</span> to go back to playing</p>
+            <p>Settings Screen, press <span style="background-color: #00FF00; color: #000000">space</span> to go back to playing</p>
             <a id="new_game2" class="link-alert">new game</a>
             <br>
             <p>Speed:
@@ -118,7 +117,7 @@ type: hacks
 </div>
 
 <script>
-    (function(){
+    (function () {
         /* Attributes of Game */
         /////////////////////////////////////////////////////////////
         // Canvas & Context
@@ -131,7 +130,7 @@ type: hacks
         const speed_setting = document.getElementsByName("speed");
         const wall_setting = document.getElementsByName("wall");
         // HTML Screen IDs (div)
-        const SCREEN_MENU = -1, SCREEN_GAME_OVER=1, SCREEN_SETTING=2;
+        const SCREEN_MENU = -1, SCREEN_GAME_OVER = 1, SCREEN_SETTING = 2;
         const screen_menu = document.getElementById("menu");
         const screen_game_over = document.getElementById("gameover");
         const screen_setting = document.getElementById("setting");
@@ -142,13 +141,13 @@ type: hacks
         const button_setting_menu = document.getElementById("setting_menu");
         const button_setting_menu1 = document.getElementById("setting_menu1");
         // Game Control
-        const BLOCK = 10;   // size of block rendering
+        const BLOCK = 10; // size of block rendering
         let SCREEN = SCREEN_MENU;
         let snake;
         let snake_dir;
         let snake_next_dir;
         let snake_speed;
-        let food = {x: 0, y: 0};
+        let food = [{ x: 0, y: 0 }, { x: 0, y: 0 }];
         let score;
         let wall;
         /* Display Control */
@@ -157,9 +156,9 @@ type: hacks
         // 1 for the main menu
         // 2 for the settings screen
         // 3 for the game over screen
-        let showScreen = function(screen_opt){
+        let showScreen = function (screen_opt) {
             SCREEN = screen_opt;
-            switch(screen_opt){
+            switch (screen_opt) {
                 case SCREEN_SNAKE:
                     screen_snake.style.display = "block";
                     screen_menu.style.display = "none";
@@ -182,19 +181,19 @@ type: hacks
         }
         /* Actions and Events  */
         /////////////////////////////////////////////////////////////
-        window.onload = function(){
+        window.onload = function () {
             // HTML Events to Functions
-            button_new_game.onclick = function(){newGame();};
-            button_new_game1.onclick = function(){newGame();};
-            button_new_game2.onclick = function(){newGame();};
-            button_setting_menu.onclick = function(){showScreen(SCREEN_SETTING);};
-            button_setting_menu1.onclick = function(){showScreen(SCREEN_SETTING);};
+            button_new_game.onclick = function () { newGame(); };
+            button_new_game1.onclick = function () { newGame(); };
+            button_new_game2.onclick = function () { newGame(); };
+            button_setting_menu.onclick = function () { showScreen(SCREEN_SETTING); };
+            button_setting_menu1.onclick = function () { showScreen(SCREEN_SETTING); };
             // speed
             setSnakeSpeed(150);
-            for(let i = 0; i < speed_setting.length; i++){
-                speed_setting[i].addEventListener("click", function(){
-                    for(let i = 0; i < speed_setting.length; i++){
-                        if(speed_setting[i].checked){
+            for (let i = 0; i < speed_setting.length; i++) {
+                speed_setting[i].addEventListener("click", function () {
+                    for (let i = 0; i < speed_setting.length; i++) {
+                        if (speed_setting[i].checked) {
                             setSnakeSpeed(speed_setting[i].value);
                         }
                     }
@@ -202,86 +201,91 @@ type: hacks
             }
             // wall setting
             setWall(1);
-            for(let i = 0; i < wall_setting.length; i++){
-                wall_setting[i].addEventListener("click", function(){
-                    for(let i = 0; i < wall_setting.length; i++){
-                        if(wall_setting[i].checked){
+            for (let i = 0; i < wall_setting.length; i++) {
+                wall_setting[i].addEventListener("click", function () {
+                    for (let i = 0; i < wall_setting.length; i++) {
+                        if (wall_setting[i].checked) {
                             setWall(wall_setting[i].value);
                         }
                     }
                 });
             }
             // activate window events
-            window.addEventListener("keydown", function(evt) {
+            window.addEventListener("keydown", function (evt) {
                 // spacebar detected
-                if(evt.code === "Space" && SCREEN !== SCREEN_SNAKE)
+                if (evt.code === "Space" && SCREEN !== SCREEN_SNAKE)
                     newGame();
             }, true);
         }
         /* Snake is on the Go (Driver Function)  */
         /////////////////////////////////////////////////////////////
-        let mainLoop = function(){
+        let mainLoop = function () {
             let _x = snake[0].x;
             let _y = snake[0].y;
-            snake_dir = snake_next_dir;   // read async event key
+            snake_dir = snake_next_dir; // read async event key
             // Direction 0 - Up, 1 - Right, 2 - Down, 3 - Left
-            switch(snake_dir){
+            switch (snake_dir) {
                 case 0: _y--; break;
                 case 1: _x++; break;
                 case 2: _y++; break;
                 case 3: _x--; break;
             }
             snake.pop(); // tail is removed
-            snake.unshift({x: _x, y: _y}); // head is new in new position/orientation
+            snake.unshift({ x: _x, y: _y }); // head is new in new position/orientation
             // Wall Checker
-            if(wall === 1){
+            if (wall === 1) {
                 // Wall on, Game over test
-                if (snake[0].x < 0 || snake[0].x === canvas.width / BLOCK || snake[0].y < 0 || snake[0].y === canvas.height / BLOCK){
+                if (snake[0].x < 0 || snake[0].x === canvas.width / BLOCK || snake[0].y < 0 || snake[0].y === canvas.height / BLOCK) {
                     showScreen(SCREEN_GAME_OVER);
                     return;
                 }
-            }else{
+            } else {
                 // Wall Off, Circle around
-                for(let i = 0, x = snake.length; i < x; i++){
-                    if(snake[i].x < 0){
+                for (let i = 0, x = snake.length; i < x; i++) {
+                    if (snake[i].x < 0) {
                         snake[i].x = snake[i].x + (canvas.width / BLOCK);
                     }
-                    if(snake[i].x === canvas.width / BLOCK){
+                    if (snake[i].x === canvas.width / BLOCK) {
                         snake[i].x = snake[i].x - (canvas.width / BLOCK);
                     }
-                    if(snake[i].y < 0){
+                    if (snake[i].y < 0) {
                         snake[i].y = snake[i].y + (canvas.height / BLOCK);
                     }
-                    if(snake[i].y === canvas.height / BLOCK){
+                    if (snake[i].y === canvas.height / BLOCK) {
                         snake[i].y = snake[i].y - (canvas.height / BLOCK);
                     }
                 }
             }
             // Snake vs Snake checker
-            for(let i = 1; i < snake.length; i++){
+            for (let i = 1; i < snake.length; i++) {
                 // Game over test
-                if (snake[0].x === snake[i].x && snake[0].y === snake[i].y){
+                if (snake[0].x === snake[i].x && snake[0].y === snake[i].y) {
                     showScreen(SCREEN_GAME_OVER);
                     return;
                 }
             }
             // Snake eats food checker
-            if(checkBlock(snake[0].x, snake[0].y, food.x, food.y)){
-                snake[snake.length] = {x: snake[0].x, y: snake[0].y};
-                altScore(++score);
-                addFood();
-                activeDot(food.x, food.y);
-            }
+            checkFoodCollision();
+
             // Repaint canvas
             ctx.beginPath();
-            ctx.fillStyle = "royalblue";
+            ctx.fillStyle = "black";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
+
             // Paint snake
-            for(let i = 0; i < snake.length; i++){
-                activeDot(snake[i].x, snake[i].y);
+            for (let i = 0; i < snake.length; i++) {
+                if (i === 0) {
+                    activeDot(snake[i].x, snake[i].y, true); // Head of the snake (Green)
+                } else {
+                    activeDot(snake[i].x, snake[i].y, true); // Body of the snake (Green)
+                }
             }
+
             // Paint food
-            activeDot(food.x, food.y);
+            for (let i = 0; i < food.length; i++) {
+                activeDot(food[i].x, food[i].y, false); // Food (Red)
+            }
+
             // Debug
             //document.getElementById("debug").innerHTML = snake_dir + " " + snake_next_dir + " " + snake[0].x + " " + snake[0].y;
             // Recursive call after speed delay, déjà vu
@@ -289,7 +293,7 @@ type: hacks
         }
         /* New Game setup */
         /////////////////////////////////////////////////////////////
-        let newGame = function(){
+        let newGame = function () {
             // snake game screen
             showScreen(SCREEN_SNAKE);
             screen_snake.focus();
@@ -298,79 +302,139 @@ type: hacks
             altScore(score);
             // initial snake
             snake = [];
-            snake.push({x: 0, y: 15});
+            snake.push({ x: 0, y: 15 });
             snake_next_dir = 1;
             // food on canvas
             addFood();
             // activate canvas event
-            canvas.onkeydown = function(evt) {
+            canvas.onkeydown = function (evt) {
                 changeDir(evt.keyCode);
             }
             mainLoop();
         }
         /* Key Inputs and Actions */
         /////////////////////////////////////////////////////////////
-        let changeDir = function(key){
+        let changeDir = function (key) {
             // test key and switch direction
-            switch(key) {
-                case 37:    // left arrow
-                    if (snake_dir !== 1)    // not right
+            switch (key) {
+                case 65: // 'A' key
+                case 37: // Left arrow key
+                    if (snake_dir !== 1) // not right
                         snake_next_dir = 3; // then switch left
                     break;
-                case 38:    // up arrow
-                    if (snake_dir !== 2)    // not down
+                case 87: // 'W' key
+                case 38: // Up arrow key
+                    if (snake_dir !== 2) // not down
                         snake_next_dir = 0; // then switch up
                     break;
-                case 39:    // right arrow
-                    if (snake_dir !== 3)    // not left
+                case 68: // 'D' key
+                case 39: // Right arrow key
+                    if (snake_dir !== 3) // not left
                         snake_next_dir = 1; // then switch right
                     break;
-                case 40:    // down arrow
-                    if (snake_dir !== 0)    // not up
+                case 83: // 'S' key
+                case 40: // Down arrow key
+                    if (snake_dir !== 0) // not up
                         snake_next_dir = 2; // then switch down
                     break;
             }
         }
+
         /* Dot for Food or Snake part */
         /////////////////////////////////////////////////////////////
-        let activeDot = function(x, y){
-            ctx.fillStyle = "#FFFFFF";
+        let activeDot = function (x, y, isSnake) {
+            ctx.fillStyle = isSnake ? "#00FF00" : "#FF0000";
             ctx.fillRect(x * BLOCK, y * BLOCK, BLOCK, BLOCK);
+
+            if (isSnake) {
+                ctx.strokeStyle = "#000000"; // Black color for snake's lines
+                ctx.strokeRect(x * BLOCK, y * BLOCK, BLOCK, BLOCK);
+            }
         }
+
         /* Random food placement */
         /////////////////////////////////////////////////////////////
-        let addFood = function(){
-            food.x = Math.floor(Math.random() * ((canvas.width / BLOCK) - 1));
-            food.y = Math.floor(Math.random() * ((canvas.height / BLOCK) - 1));
-            for(let i = 0; i < snake.length; i++){
-                if(checkBlock(food.x, food.y, snake[i].x, snake[i].y)){
-                    addFood();
+
+
+let addFood = function () {
+    for (let i = 0; i < food.length; i++) {
+        if (food[i].x === 0 && food[i].y === 0) {
+            let foodX, foodY;
+            do {
+                foodX = Math.floor(Math.random() * (canvas.width / BLOCK));
+                foodY = Math.floor(Math.random() * (canvas.height / BLOCK));
+            } while (isSnakeColliding(foodX, foodY) || isFoodColliding(foodX, foodY));
+
+            food[i] = { x: foodX, y: foodY };
+        }
+    }
+}
+
+
+
+let isSnakeColliding = function (x, y) {
+    for (let i = 0; i < snake.length; i++) {
+        if (snake[i].x === x && snake[i].y === y) {
+            return true;
+        }
+    }
+    return false;
+}
+
+
+        /* Collision Detection */
+        /////////////////////////////////////////////////////////////
+        let isFoodColliding = function (x, y) {
+            for (let i = 0; i < snake.length; i++) {
+                if (snake[i].x === x && snake[i].y === y) {
+                    return true;
+                }
+            }
+            for (let i = 0; i < food.length; i++) {
+                if (food[i].x === x && food[i].y === y) {
+                    return true;
+                }
+            }
+            return false;
+        }
+
+        let checkFoodCollision = function () {
+            for (let i = 0; i < food.length; i++) {
+                if (snake[0].x === food[i].x && snake[0].y === food[i].y) {
+                    snake.push({ x: food[i].x, y: food[i].y });
+                    food[i] = { x: 0, y: 0 }; // Reset the eaten food's position
+                    score++;
+                    altScore(score);
                 }
             }
         }
-        /* Collision Detection */
-        /////////////////////////////////////////////////////////////
-        let checkBlock = function(x, y, _x, _y){
-            return (x === _x && y === _y);
-        }
+
         /* Update Score */
         /////////////////////////////////////////////////////////////
-        let altScore = function(score_val){
+        let altScore = function (score_val) {
             ele_score.innerHTML = String(score_val);
         }
+
         /////////////////////////////////////////////////////////////
         // Change the snake speed...
         // 150 = slow
         // 100 = normal
         // 50 = fast
-        let setSnakeSpeed = function(speed_value){
+        let setSnakeSpeed = function (speed_value) {
             snake_speed = speed_value;
         }
+
         /////////////////////////////////////////////////////////////
-        let setWall = function(wall_value){
+        let setWall = function (wall_value) {
             wall = wall_value;
-            if(wall === 0){screen_snake.style.borderColor = "#606060";}
-            if(wall === 1){screen_snake.style.borderColor = "#FFFFFF";}
+            if (wall === 0) {
+                screen_snake.style.borderColor = "#606060";
+            }
+            if (wall === 1) {
+                screen_snake.style.borderColor = "#00FF00";
+            }
         }
     })();
 </script>
+
+
