--- a/_posts/2023-09-01-Week-3-Plan.md
+++ b/_posts/2023-09-01-Week-3-Plan.md
@@ -10,8 +10,7 @@ courses: {csp: {week: 3}}
 
 
 > Weekly goals/ plans
-- [ ] 
-- [ ] 
-- [ ] 
-- [ ] 
-- [ ] 
+- [ ] Make the galaga projects
+- [ ]This Galaga project has a lot of work that needs to be done. Initially, we must make the enemy shoot bullets. Next there must be a way to lose the game, Then there must be a boss, Finally, as time goes on, the game must be more difficult
+- [ ]after that main objective, work on linux code that has full functionality with all of the commands used commonly in linux.
+- [ ]Make a Javascript table with an API (data taken from the web) and use that API with Jquery to make a table with pokemon statistics. This table will include type, rarity, power, weaknesses ,and pokemon generation to name a few things. To be less vague, add styling using css and this styling will make button
