git commit -m 'message'

--- a/_notebooks/2023-10-02-STUDENTTEACHALGOR.ipynb
+++ b/_notebooks/2023-10-02-STUDENTTEACHALGOR.ipynb
@@ -560,6 +560,49 @@
     "### Criteria for above 90%: <br>\n",
     "1. Add a unique program, function, or feature not specified by criterias\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_analyzer(text):\n",
+    "    # Convert text to lowercase for case-insensitivity\n",
+    "    text = text.lower()\n",
+    "    \n",
+    "    # Count total letters, numbers, and spaces\n",
+    "    total_letters = sum(c.isalpha() for c in text)\n",
+    "    total_numbers = sum(c.isdigit() for c in text)\n",
+    "    total_spaces = sum(c.isspace() for c in text)\n",
+    "    \n",
+    "    # Count the number of vowels\n",
+    "    vowels = \"aeiou\"\n",
+    "    total_vowels = sum(c in vowels for c in text)\n",
+    "    \n",
+    "    # Calculate average word length\n",
+    "    words = text.split()\n",
+    "    total_word_length = sum(len(word) for word in words)\n",
+    "    if words:\n",
+    "        average_word_length = total_word_length / len(words)\n",
+    "    else:\n",
+    "        average_word_length = 0\n",
+    "\n",
+    "    # Total characters including spaces and numbers\n",
+    "    total_characters = total_letters + total_numbers + total_spaces\n",
+    "\n",
+    "    # Display the results\n",
+    "    print(\"Text Analysis Results:\")\n",
+    "    print(f\"Total Characters (including spaces and numbers): {total_characters}\")\n",
+    "    print(f\"Total Vowels: {total_vowels}\")\n",
+    "    print(f\"Average Word Length: {average_word_length:.2f}\")\n",
+    "\n",
+    "# Get input from the user\n",
+    "user_input = input(\"Enter a text to analyze: \")\n",
+    "\n",
+    "# Call the text_analyzer function with the user input\n",
+    "text_analyzer(user_input)\n"
+   ]
   }
  ],
  "metadata": {
