git commit -m 'message'

--- a/_notebooks/2023-10-09-boolean-if.ipynb
+++ b/_notebooks/2023-10-09-boolean-if.ipynb
@@ -108,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are an adult\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = int(input(\"Enter your age\"))\n",
     "if(age >= 18):\n",
@@ -181,17 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bring an umbrella\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "is_raining = True\n",
     "\n",
@@ -250,19 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "98\n",
-      "79\n",
-      "a is greater than b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -294,9 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Anthony running /bin/python\n",
+      "You will be asked 5 questions.\n",
+      "Question: Question 1. What is a valid Boolean value? type in all lowercase\n",
+      "true is correct!\n",
+      "Question: Question 2. Boolean expressions are important in program because they control the '__' of a program. type in all lowercase\n",
+      "flow is correct!\n",
+      "Question: Question 3. The purpose of if else statements is for decision making in the code. true or false\n",
+      "true is correct!\n",
+      "Question: Question 4. What two symbols are used for 'not equal to' as a relational operator?\n",
+      "!= is correct!\n",
+      "Question: Question 5. A logical operator is used to evalute multiple conditions to produce 'one' or 'multiple' boolean value(s).\n",
+      "multiple is correct!\n",
+      "Anthony, you scored 5/5\n"
+     ]
+    }
+   ],
    "source": [
     "#HOMEWORK\n",
     "\n",
@@ -331,21 +325,57 @@
     "# Ask a question about Boolean values and check the response\n",
     "# Provide feedback based on the correctness of the response\n",
     "\n",
+    "answer1 = question_with_response(\"Question 1. What is a valid Boolean value? type in all lowercase\")\n",
+    "if answer1 == \"true\" or answer1 == \"false\":\n",
+    "        print(f\"{answer1} is correct!\")\n",
+    "        correct += 1\n",
+    "else:\n",
+    "        print(f\"{answer1} is incorrect! The correct answer is 'true' or 'false'.\")\n",
+    "    \n",
+    "\n",
     "# Question 2: Boolean Expressions\n",
     "# Ask a question about Boolean expressions and their importance in programming\n",
     "# Provide feedback based on the correctness of the response\n",
+    "\n",
+    "answer2 = question_with_response(\"Question 2. Boolean expressions are important in program because they control the '__' of a program. type in all lowercase\")\n",
+    "if answer2 == \"flow\":\n",
+    "        print(f\"{answer2} is correct!\")\n",
+    "        correct += 1\n",
+    "else:\n",
+    "        print(f\"{answer2} is incorrect! The correct answer is 'flow'.\")\n",
     "\n",
     "# Question 3: Conditional Statements\n",
     "# Ask a question about the purpose of conditional (if-else) statements in programming\n",
     "# Provide feedback based on the correctness of the response\n",
     "\n",
+    "answer3 = question_with_response(\"Question 3. The purpose of if else statements is for decision making in the code. true or false\")\n",
+    "if answer3 == \"true\":\n",
+    "        print(f\"{answer3} is correct!\")\n",
+    "        correct += 1\n",
+    "else:\n",
+    "        print(f\"{answer3} is incorrect! The correct answer is 'true'.\")\n",
+    "\n",
     "# Question 4: Relational Operators\n",
     "# Ask a question about common relational operators in programming and provide examples\n",
     "# Provide feedback based on the correctness of the response\n",
     "\n",
+    "answer4 = question_with_response(\"Question 4. What two symbols are used for 'not equal to' as a relational operator?\")\n",
+    "if answer4 == \"!=\":\n",
+    "        print(f\"{answer4} is correct!\")\n",
+    "        correct += 1\n",
+    "else:\n",
+    "        print(f\"{answer4} is incorrect! The correct answer is '!='.\")\n",
+    "\n",
     "# Question 5: Logical Operators\n",
     "# Ask a question about the use of logical operators in programming and provide examples\n",
     "# Provide feedback based on the correctness of the response\n",
+    "\n",
+    "answer5 = question_with_response(\"Question 5. A logical operator is used to evalute multiple conditions to produce 'one' or 'multiple' boolean value(s).\")\n",
+    "if answer5 == \"multiple\":\n",
+    "        print(f\"{answer5} is correct!\")\n",
+    "        correct += 1\n",
+    "else:\n",
+    "        print(f\"{answer5} is incorrect! The correct answer is 'multiple'.\")\n",
     "\n",
     "# Display the final score\n",
     "# Calculate the percentage of correct answers and provide feedback\n",
