git commit -m 'message'

--- a/_notebooks/2023-10-24-developing-procedures.ipynb
+++ b/_notebooks/2023-10-24-developing-procedures.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quiz_grader(quiz_grade, current_points, total_points):\n",
+    "def procedure(quiz_grade, current_points, total_points):\n",
     "    # calculate current grade\n",
     "    current_grade = (current_points / total_points) * 100\n",
     "\n",
@@ -63,7 +63,7 @@
     "current_points = 90  # Current points earned\n",
     "total_points = 100  # Total points for the quiz\n",
     "\n",
-    "new_quiz_grade = quiz_grader(quiz_grade, current_points, total_points)\n",
+    "new_quiz_grade = procedure(quiz_grade, current_points, total_points)\n",
     "\n",
     "print(f\"Old quiz grade: {quiz_grade}\")\n",
     "print(f\"New quiz grade: {new_quiz_grade}\")\n"
@@ -214,30 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your exam grade is: Pass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def calculate_grade(points_earned):\n",
-    "    if points_earned >= 50:\n",
-    "        return \"Pass\"\n",
-    "    else:\n",
-    "        return \"Fail\"\n",
-    "    \n",
-    "points_earned = 87\n",
-    "exam_grade = calculate_grade(points_earned)\n",
-    "\n",
-    "print(f'Your exam grade is: {exam_grade}')"
+    "# your code here"
    ]
   },
   {
@@ -265,39 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Price: $580.00\n",
-      "Percent Discount: 15.00%\n",
-      "Amount of discount: $87.00\n",
-      "Final Price: $493.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# your code here\n",
-    "\n",
-    "def apply_discount(original_price, percent_discount): # takes parameters original_price and percent_discount\n",
-    "    \n",
-    "    decimal_discount = percent_discount / 100 # Converts the percentage to a decimal (out of 1)\n",
-    "    \n",
-    "    discount_amount = decimal_discount * original_price # multiplies decimal by original price to get the amount of discount in dollars\n",
-    "    \n",
-    "    final_price = original_price - discount_amount # calculates new price after finding the discount\n",
-    "    \n",
-    "    # displays results:\n",
-    "    print(f\"Original Price: ${original_price:.2f}\")\n",
-    "    print(f\"Percent Discount: {percent_discount:.2f}%\")\n",
-    "    print(f\"Amount of discount: ${discount_amount:.2f}\")\n",
-    "    print(f\"Final Price: ${final_price:.2f}\")\n",
-    "    \n",
-    "# Calling the function with example arguments:\n",
-    "apply_discount(580, 15)"
+    "# your code here"
    ]
   },
   {
@@ -309,37 +262,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ROTATE_LEFT()\n",
-    "\n",
-    "MOVE_FORWARD()\n",
-    "\n",
-    "MOVE_FORWARD()\n",
-    "\n",
-    "MOVE_FORWARD()\n",
-    "\n",
-    "ROTATE_RIGHT()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "https://imgur.com/a/BOcN8tu\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Add your image here by adding the link between the \"\" and removing the comment formatting:\n",
     "<!-- <img src=\"\"> -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
    ]
   },
   {
@@ -352,35 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3, 5]\n",
-      "[2, 3, 5, 7, 11]\n",
-      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def is_prime(num):\n",
-    "    if num < 2: # no number less than 2 is prime\n",
-    "        return False\n",
-    "    for i in range(2, int(num**0.5) + 1): # loop from 2 to the integer square root of the number\n",
-    "        if num % i == 0:\n",
-    "            return False\n",
-    "    return True # return True if none of these conditions are satisfied\n",
-    "\n",
     "def primes(n):\n",
-    "    primes_list = [] # store the prime numbers in a list\n",
-    "    for num in range(2, n + 1): # iterate from 2 to n\n",
-    "        if is_prime(num):\n",
-    "            primes_list.append(num) # add to primes list if is_prime is True\n",
-    "    return primes_list\n",
-    "\n",
+    "  # your code here\n",
     "\n",
     "# tests\n",
     "print(primes(5))\n",
