--- a/_notebooks/2023-11-30-FaultTolerance.ipynb
+++ b/_notebooks/2023-11-30-FaultTolerance.ipynb
@@ -250,6 +250,52 @@
     "- First make a simple code that runs sequentially, for example loops ten times before stopping.\n",
     "- Then make code that completes the same job quicker by running parallel. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def job():\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "def sequential():\n",
+    "    for i in range(1, 11):\n",
+    "        job()\n",
+    "\n",
+    "# call sequential function\n",
+    "sequential()\n",
+    "start = time.time()\n",
+    "end = time.time()\n",
+    "print(f\"executing the sequential code took {end - start} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import concurrent.futures\n",
+    "import time\n",
+    "\n",
+    "def job():\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "def parallel():\n",
+    "    with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "        iterations = range(1, 11)\n",
+    "        executor.map(job, iterations)\n",
+    "\n",
+    "# call parallel code\n",
+    "parallel()\n",
+    "start = time.time()\n",
+    "end = time.time()\n",
+    "print(f\"executing parallel code took {end - start} seconds\")"
+   ]
   }
  ],
  "metadata": {
