--- a/_notebooks/2023-12-07-DigitalDivide.ipynb
+++ b/_notebooks/2023-12-07-DigitalDivide.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "How has the digital divide been bettered/worsened by recent national or global events? How may the digital divide get worse in the future without intervention?\n",
     "\n",
-    "Answer:"
+    "Answer: Recent national and global events, such as the COVID-19 pandemic, have worsened the digital divide by highlighting disparities in access to technology and internet connectivity, particularly in education and remote work. Without intervention, the digital divide may worsen in the future due to advancing technology, unequal infrastructure development, affordability barriers, and the education and skills gap. Addressing these issues through infrastructure investments, affordability programs, digital literacy initiatives, and public-private partnerships is crucial to narrowing the digital divide and promoting equitable access to digital resources."
    ]
   },
   {
@@ -266,7 +266,11 @@
    "source": [
     "Give some examples of how individuals, organizations, and the government can all help lessen the digital divide.\n",
     "\n",
-    "Answer: "
+    "Answer: Individuals can help lessen the digital divide by volunteering their time and expertise to teach digital skills to underserved communities, donating used devices to those in need, and advocating for affordable and accessible internet options in their communities.\n",
+    "\n",
+    "Organizations can contribute by establishing programs that provide digital literacy training, offering discounted or subsidized internet services, donating devices to schools and community centers, and partnering with local communities to bridge the digital divide.\n",
+    "\n",
+    "The government can play a crucial role by investing in infrastructure development to expand broadband access in underserved areas, implementing policies that promote affordable internet access, funding digital skills training programs, and supporting initiatives that aim to close the digital divide, particularly in marginalized communities."
    ]
   }
  ],
