--- a/_notebooks/2023-12-5-Beneficial-and-Harmful-Effect.ipynb
+++ b/_notebooks/2023-12-5-Beneficial-and-Harmful-Effect.ipynb
@@ -150,11 +150,11 @@
     "### Homework\n",
     "- Choose an innovation(Social media, computers, phones, etc.) and talk about an alternative use than what its actually use for. Then, give the potential positive and negative impacts of the use you came up with\n",
     "\n",
-    "> - ANSWER\n",
+    "> - An innovation like social media can have an alternate use from its purpose of helping people connect and share ideas, like being a platform for distributing illegal media. For example, on TikTok people may post multiple clips of a movie that when played in order, shows the entire movie for free. The positive impact of this is that it may be an easier alternative to those who would pirate anyways and maybe support a different website. The negative impact of this is that this may impact the sales of some movies if people can just watch it for free on TikTok.\n",
     "\n",
     "- How might you as a programmer implement code that helps your program have less unintented risks.\n",
     "\n",
-    "> - ANSWER\n"
+    "> - Having people review your code and try to brainstorm different ways this code could be used.\n"
    ]
   }
  ],
