--- a/_posts/2024-02-28-finalcpt.md
+++ b/_posts/2024-02-28-finalcpt.md
@@ -8,9 +8,8 @@ courses: {'compsci': {'week': 17}}
 type: hacks
 ---
 
-Summary of CPT Project
+Summary of Final CPT Project
 ----------------------
-
 
 Our group worked on a travel website with different games like trivia, a quiz to find out where you should travel to, and a memory game and guessing game with flags. There was a leaderboard with scores tracked based on users from the signups.
 
